--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,49 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+html {
+  margin: 0;
+}
+
+body {
+  font-family: sans-serif;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.page {
+  width: 60vw;
+  min-width: 600px;
+  height: 60vh;
+  min-height: 480px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  box-shadow: 4px 4px 4px rgba(128, 128, 128, 0.468),
+    -4px -4px 4px rgba(128, 128, 128, 0.468);
+  border-radius: 8px;
+  /* border: 1px solid black; */
+}
+
+.new_task_btn {
+  padding: 8px;
+  border-radius: 8px;
+  background-color: green;
+  color: white;
+  font-size: large;
+  font-weight: bold;
+}
+
+.list_item {
+  list-style: none;
+  margin: 8px;
+  padding: 8px;
+  line-height: 4px;
+}
+
+.todo_list {
+  width: 100%;
+  padding-left: 0;
+}
